[package]
name = "celestial-overlay-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_window_glfw_passthrough = "0.8.0"
egui_overlay = "0.8.0"
egui = "0.26.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
egui_render_wgpu = { version = "0.8.0", optional = true }
egui_render_three_d = { version = "0.8.0", optional = true }
egui_commonmark = "0.13"
wallpaper = { version = "3.2.0", features = ["from_url"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "=1.0.1"
rand = "0.8"

[features]
default = ["egui_default", "three_d"]
egui_default = ["egui/default"]
three_d = ["dep:egui_render_three_d"]
wgpu = ["dep:egui_render_wgpu"]